# factoradic_c_utils

./: .gitignore  CHANGES  Makefile.am  Makefile.in  README.md  aclocal.m4  benchmark.sh  benchmark.txt  config.h.in  configure  configure.ac
lib/gnulib/: .gitignore  Makefile.gnulib
m4/: gmp_cc_cflags_from_header.m4
m4/gnulib/: gnulib-cache.m4  gnulib-comp.m4
src/: common.h  dec2fact.c  fact2dec.c  globals.c  options.c  options.h
tests/: check_dec2fact  check_fact2dec  test_helper.sh
tests/gnulib/: .gitignore  Makefile.am  Makefile.in
